# AI-Trading-Bot-Pro-Max-Ultra-Plus-9000

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  setup.py
data/snapshots/: backtest_equity.csv  backtest_metrics.json  backtest_walkforward.json  latest_signal.json  market_analysis.json  market_snapshot.json  metadata.json  ml_latest.json  ml_predictions.csv  news_snapshot.json  overview_snapshot.json  price_history.csv  signal_history.csv  strategy_compare.json  technical_snapshot.json  trade_log.csv
models/: model_metadata.json
notebooks/: backtesting_showcase.ipynb  ml_portfolio_showcase.ipynb
notebooks/.ipynb_checkpoints/: ml_portfolio_showcase-checkpoint.ipynb  ml_portfolio_showcase_learning-checkpoint.ipynb
scripts/: export_snapshots.py
src/btc_paper/: api_server.py  cli.py  config.py  db.py  news_sync.py  overview_data.py  paper_trader.py  pipeline.py  public_settings.py  signal_engine.py  snapshot_export.py  snapshots.py  test_news_sentiment.py  test_technical.py
src/btc_paper/backfill/: backfill_prices.py  reconstruct_signals.py
src/btc_paper/backtest/: __init__.py  dataset.py  engine.py  execution.py  metrics.py  portfolio.py  position_sizing.py  reconstruct.py  schemas.py  strategy.py
src/btc_paper/ml/: __init__.py  export_features.py  feature_schema.py  features_live.py  ml_signal_engine.py  train_ml_models.py
web/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
web/public/: critical-shell.css
web/scripts/: start-api.mjs
web/src/app/: globals.css  (+2 more)
(+39 files in other folders)
