[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-ai-paper-trading"
version = "0.1.0"
description = "AI Trading Bot Pro Max Ultra Plus 9000 — FinBERT news, CoinGecko technicals, optional ML, Next.js + FastAPI dashboard"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "apscheduler>=3.10.0",
  "httpx>=0.27.0",
  "joblib>=1.3.0",
  "numpy>=1.24.0",
  "pandas>=2.0.0",
  "plotly>=5.18.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "scikit-learn>=1.3.0",
  "torch>=2.0.0",
  "transformers>=4.36.0",
  "xgboost>=2.0.0",
  "yfinance>=0.2.33",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
btc-paper-run = "btc_paper.cli:run_once"
btc-paper-scheduler = "btc_paper.scheduler.daemon:main"
btc-paper-test-news = "btc_paper.test_news_sentiment:main"
btc-paper-test-tech = "btc_paper.test_technical:main"
btc-paper-export-ml-features = "btc_paper.ml.export_features:main"
btc-paper-train-ml = "btc_paper.ml.train_ml_models:main"
btc-paper-api = "btc_paper.api_server:main"

[tool.setuptools.packages.find]
where = ["src"]
